--- a/frontend/src/styles/Filter.css
+++ b/frontend/src/styles/Filter.css
@@ -1,6 +1,6 @@
 .filterBackground {
     height: 60vh;
-    background: rgba(0, 0, 0, 0.55) url('../assets/catalogue_img.png');
+    background: rgba(0, 0, 0, 0.55) url('../assets/catalogue_img.jpg');
     background-blend-mode: darken;
     background-position: center; 
     background-repeat: no-repeat;
